--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -32,5 +32,5 @@
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
 [[main]]
   name = "CV"
-  url = "files/Justin Foster - Resume M3"
+  url = "files/Justin Foster - Resume M3.pdf"
   weight = 40
