--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -24,8 +24,8 @@
   weight = 30
   
   [[main]]
-  name = "Accomplishmnents"
-  url = "#accomplishmnents"
+  name = "Accomplishments"
+  url = "#accomplishments"
   weight = 40
   
     [[main]]
