--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -14,29 +14,32 @@
 #  weight = 20
 
 [[main]]
-  name = "Skills"
-  url = "#skills"
-  weight = 20
-
-[[main]]
   name = "Experience"
   url = "#experience"
-  weight = 30
-  
-  [[main]]
-  name = "Accomplishments"
-  url = "#accomplishments"
-  weight = 40
-  
-    [[main]]
-  name = "Photo Gallery"
-  url = "#posts"
-  weight = 50
+  weight = 20
   
   [[main]]
   name = "Projects"
   url = "#projects"
+  weight = 30
+
+[[main]]
+  name = "Skills"
+  url = "#skills"
+  weight = 40
+
+
+  
+  [[main]]
+  name = "Accomplishments"
+  url = "#accomplishments"
+  weight = 50
+  
+    [[main]]
+  name = "blogs"
+  url = "#posts"
   weight = 60
+  
 
 [[main]]
   name = "Contact"
@@ -47,5 +50,5 @@
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
 [[main]]
   name = "CV"
-  url = "files/JustinFosterResume2021.pdf"
+  url = "files/JustinFosterResume2022.pdf"
   weight = 80
